# conode

./: .gitignore  CLAUDE.md  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/studio/: package.json  svelte.config.js  vite.config.ts  vitest.config.ts
apps/studio/src/: app.html
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/icons/: icon.icns
apps/studio/src-tauri/src/: main.rs
apps/studio/src/routes/: +layout.svelte  +layout.ts  +page.svelte
docs/: PLAN.md  installer.md  output-bridges.md  spec-tiers.md
engine/: pyproject.toml  requirements-cuda.txt  requirements-diffusers.txt
engine/conode_engine/: __init__.py  app.py  bench.py  licensing.py
engine/conode_engine/audio/: __init__.py  capture.py  features.py  modmatrix.py  prompt_binding.py
engine/conode_engine/core/: __init__.py  graph.py  latest_wins.py  models.py  param_spec.py  preview.py  processor.py  scenes.py  scheduler.py
engine/conode_engine/diffusion/: __init__.py  backend.py  diffusers_backend.py  sif.py  spec.py  streamdiffusion_backend.py
engine/conode_engine/gesture/: __init__.py  one_euro.py  rules.py
engine/conode_engine/nodes/: __init__.py  audio_in.py  blend.py  camera.py  canny.py  color_grade.py  crossfade.py  depth.py  envelope_follower.py  feedback.py  gesture_recognizer.py  hand_tracker.py  image.py  lfo.py  live_diffusion.py  mapped_output.py  mask_compose.py  mod_matrix.py  pose.py  recorder.py  region_mask.py  segmentation.py  style_preset.py  switch.py  video_file.py
engine/conode_engine/protocol/: __init__.py  messages.py  server.py
engine/tests/: test_audio.py  test_bench.py  test_camera.py  test_diffusion.py  test_engine.py  test_gesture.py  test_graph.py  test_licensing_presets.py  test_modmatrix_editor.py  test_nodes_b.py  test_output.py  test_protocol.py  test_roadmap_nodes.py  test_scenes.py  test_spec.py  test_vision.py
presets/: audio-reactive.json  gesture-diffusion.json
skills/gesture-rules/: SKILL.md
skills/realtime-perf/: SKILL.md
(+26 files in other folders)
