[package]
name = "conode-studio"
version = "0.0.0"
description = "conode studio — 실시간 AI 비주얼 퍼포먼스 엔진 UI"
authors = ["burnkim"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps a mobile-friendly single entry point (see src/lib.rs).
name = "conode_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true
